--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/grk.json
@@ -126,6 +126,18 @@
     {
       "loc": "NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC",
       "text": "Όνομα θέματος για δημιουργία"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE",
+      "text": "Δημιουργία θεμάτων"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_DESC",
+      "text": "Δημιουργήστε εύκολα τα θέματά σας"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_BODY",
+      "text": "Μπορείτε να χρησιμοποιήσετε αυτό το διαδραστικό TUI για να δημιουργήσετε θέματα πιο εύκολα από πριν. Με το προηγμένο εργαλείο επιλογής χρωμάτων που υποστηρίζεται από την Terminaux, μπορείτε να δημιουργήσετε τα δικά σας προσαρμοσμένα εντυπωσιακά θέματα για τον πυρήνα σας, ώστε να τον εξατομικεύσετε με την επιλογή χρώματος που έχετε κάνει."
     }
   ]
 }
