--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/ltn.json
@@ -125,6 +125,18 @@
     {
       "loc": "NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC",
       "text": "Theme nomen creare"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE",
+      "text": "Themata creando"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_DESC",
+      "text": "Themata tua facile crea"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_BODY",
+      "text": "Hoc TUI interactivo uti potes ad themata facilius quam antea creanda. Cum selectore colorum provecto a Terminaux impulsato, themata tua propria et pulchra pro nucleo tuo creare potes ut ea cum electione coloris tui personalizes."
     }
   ]
 }
