--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.ga.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.ga.resx
@@ -207,5 +207,14 @@
   <data name="NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC" xml:space="preserve">
     <value>Ainm téama le cruthú</value>
   </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Téamaí a chruthú</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Cruthaigh do théamaí féin go héasca</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Is féidir leat an TUI idirghníomhach seo a úsáid chun téamaí a chruthú níos éasca ná riamh. Leis an roghnóir dathanna chun cinn atá faoi thiomáint ag Terminaux, is féidir leat do théamaí saincheaptha iontacha a chruthú do do chroílár chun é a phearsantú le do rogha datha.</value>
+  </data>
 
 </root>
