--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.hi.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.hi.resx
@@ -207,5 +207,14 @@
   <data name="NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC" xml:space="preserve">
     <value>बनाने के लिए थीम का नाम</value>
   </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>थीम बनाना</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_DESC" xml:space="preserve">
+    <value>आसानी से अपनी थीम बनाएं</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_BODY" xml:space="preserve">
+    <value>आप इस इंटरैक्टिव TUI का इस्तेमाल करके पहले से ज़्यादा आसानी से थीम बना सकते हैं। Terminaux के एडवांस्ड कलर पिकर से, आप अपने कर्नेल के लिए अपनी पसंद के कलर के हिसाब से अपनी पसंद की कस्टम शानदार थीम बना सकते हैं।</value>
+  </data>
 
 </root>
