--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.id.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.id.resx
@@ -207,5 +207,14 @@
   <data name="NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC" xml:space="preserve">
     <value>Nama tema yang akan dibuat</value>
   </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Membuat tema</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Buat tema Anda dengan mudah</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Anda dapat menggunakan TUI interaktif ini untuk membuat tema lebih mudah dari sebelumnya. Dengan pemilih warna canggih yang didukung oleh Terminaux, Anda dapat membuat tema kustom yang memukau untuk kernel Anda dan mempersonalisasikannya dengan pilihan warna Anda.</value>
+  </data>
 
 </root>
