--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.it.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.it.resx
@@ -207,5 +207,14 @@
   <data name="NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC" xml:space="preserve">
     <value>Nome del tema da creare</value>
   </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Creazione di temi</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Crea facilmente i tuoi temi</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Puoi utilizzare questa interfaccia utente interattiva per creare temi in modo più semplice che mai. Con il selettore colori avanzato offerto da Terminaux, puoi creare temi personalizzati e straordinari per il tuo kernel, personalizzandolo con i colori che preferisci.</value>
+  </data>
 
 </root>
