--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.vi.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/Output/Localizations.vi.resx
@@ -207,5 +207,14 @@
   <data name="NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC" xml:space="preserve">
     <value>Tên chủ đề để tạo</value>
   </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Tạo chủ đề</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Dễ dàng tạo chủ đề</value>
+  </data>
+  <data name="NKS_THEMESTUDIO_APP_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Bạn có thể sử dụng TUI tương tác này để tạo chủ đề dễ dàng hơn bao giờ hết. Với bộ chọn màu nâng cao được hỗ trợ bởi Terminaux, bạn có thể tạo các chủ đề tùy chỉnh tuyệt đẹp cho kernel của mình để cá nhân hóa theo lựa chọn màu sắc của bạn.</value>
+  </data>
 
 </root>
