--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/ind.json
@@ -125,6 +125,18 @@
     {
       "loc": "NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC",
       "text": "banaane ke lie theem ka naam"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE",
+      "text": "theem banaana"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_DESC",
+      "text": "aasaanee se apanee theem banaen"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_BODY",
+      "text": "aap is intaraiktiv tui ka istemaal karake pahale se zyaada aasaanee se theem bana sakate hain. tairminaux ke edavaansd kalar pikar se, aap apane karnel ke lie apanee pasand ke kalar ke hisaab se apanee pasand kee kastam shaanadaar theem bana sakate hain."
     }
   ]
 }
