--- a/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.ThemeStudio/Resources/Languages/kor-T.json
@@ -126,6 +126,18 @@
     {
       "loc": "NKS_THEMESTUDIO_COMMAND_MKTHEME_ARGUMENT_THEMENAME_DESC",
       "text": "만들 테마 이름"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_TITLE",
+      "text": "테마 만들기"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_DESC",
+      "text": "테마를 쉽게 만드세요"
+    },
+    {
+      "loc": "NKS_THEMESTUDIO_APP_TUI_HELP01_BODY",
+      "text": "이 대화형 TUI를 사용하면 이전보다 훨씬 쉽게 테마를 만들 수 있습니다. Terminaux가 제공하는 고급 색상 선택기를 사용하면 커널에 맞는 멋진 테마를 직접 만들고 원하는 색상으로 개인화할 수 있습니다."
     }
   ]
 }
